# arch-install-manager

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  PKGBUILD  PKGBUILD-bin  PKGBUILD-git  PKGBUILD.git  README.md  SECURITY.md  arch-install-manager.desktop  arch-update-manager.desktop  com.destbg.arch-install-manager.desktop  com.destbg.arch-install-manager.policy  com.destbg.arch-update-manager.policy
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  update-aur-git.yml  update-aur.yml
res/polkit/: 49-daim-check.rules
res/systemd/: arch-update-manager-check.service  arch-update-manager-check.timer  arch-update-manager-tray.service  daim-check.service  daim-check.timer  daim-tray.service
res/sysusers/: daim-build.conf
scripts/: install.sh
src/: constants.rs  lib.rs  main.rs
src/engine/: mod.rs  picker.rs
src/helpers/: appimage.rs  appimage_config.rs  arch_news.rs  aur.rs  aur_maintainers.rs  aur_pkgbuild.rs  aur_scan.rs  database_lock.rs  decorations.rs  desktop_apps.rs  disk_space.rs  elevated.rs  flatpak.rs  format.rs  get_navigation_stack.rs  history.rs  installed_packages.rs  logger.rs  mirrors.rs  mod.rs  network.rs  package_files.rs  package_updates.rs  pacman_cache.rs  pacman_ignore.rs  pacman_repos.rs  post_update.rs  power.rs  release_notes.rs  repo_switches.rs  search.rs  security.rs  settings.rs  shortcuts.rs  snapper.rs  snooze.rs  terminal.rs  timeshift.rs  tray_integration.rs  tray_state.rs  (+1 more)
src/ipc/: client.rs  protocol.rs  server.rs
src/models/: app_settings.rs  appimage_entry.rs  appimage_update_source.rs  aur_build.rs  aur_info.rs  aur_managers.rs  aur_plan.rs  aur_scan_finding.rs  cache_candidates.rs  cached_version.rs  change_kind.rs  check_schedule.rs  diff_row.rs  discovered_appimage.rs  flatpak_installation.rs  history_action.rs  history_row.rs  history_row_object.rs  history_transaction.rs  info_panel.rs  installed_flatpak.rs  log_file.rs  log_level.rs  mirror_tool.rs  mod.rs  news_item.rs  news_state.rs  op.rs  open_vulnerability.rs  paccache_dry_result.rs  package_info.rs  (+24 more)
tests/: ipc_roundtrip.rs
(+25 files in other folders)
