[package]
name = "arch-install-manager"
version = "1.0.0"
edition = "2024"

[lib]
name = "arch_install_manager"
path = "src/lib.rs"

[dependencies]
gtk4 = { version = "0.11.4", features = ["v4_10"] }
glib = "0.22.7"
gio = "0.22.6"
anyhow = "1.0.102"
regex = "1.12.4"
futures = "0.3.32"
vte4 = { version = "0.10.0", features = ["v0_76"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
chrono = { version = "0.4.45", features = ["serde"] }
shlex = "2.0.1"
alpm = "5.0.2"
pacmanconf = "3.1.0"
libc = "0.2.186"
sourceview5 = "0.11.0"
similar = "3.1.1"
ksni = { version = "0.3.5", default-features = false, features = [
    "blocking",
    "async-io",
] }
signal-hook = "0.4.4"
notify-rust = "4.18.0"
nix = { version = "0.31.3", features = [
    "socket",
    "uio",
    "fs",
    "user",
    "process",
    "term",
] }

[[bin]]
name = "daim-gui"
path = "src/main.rs"

[[bin]]
name = "daim"
path = "src/bin/daim.rs"

[[bin]]
name = "daim-helper"
path = "src/bin/helper.rs"

[[bin]]
name = "daim-tray"
path = "src/bin/tray.rs"

[[bin]]
name = "daim-check"
path = "src/bin/check.rs"
